@@ -1,7 +1,9 @@
 * New in Guile-Avahi 0.1
 
-** Export `lookup-result-flag' values (were missing)
 ** Documentation and test suite improvements
+** Bug fixes
+*** Export `lookup-result-flag' values (were missing)
+*** Resolvers now properly handle NULL addresses
 
 ;; Local Variables:
 ;; mode: outline
